--- a/com.supermarketProject/src/main/resources/Config.properties
+++ b/com.supermarketProject/src/main/resources/Config.properties
@@ -1,3 +1,6 @@
 ChromeSystemProperty = webdriver.chrome.driver
 ChromeDriverPath = \\src\\main\\resources\\chromedriver.exe
 url = http://groceryapp.uniqassosiates.com/admin/login
+EdgeSystemProperty=webdriver.edge.driver
+EdgeDriverPath=\\src\\main\\resources\\msedgedriver.exe
+ImagePath=\\src\\main\\resources\\WF Model.jpg
